--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.9.8",
+    "@types/react-router-dom": "^5.1.0",
     "@types/styled-components": "^4.1.19",
     "@zopauk/react-components": "^2.3.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0",
     "typescript": "^3.6.4"
