--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/node": "^12.11.2",
     "@types/react": "^16.9.8",
     "@types/react-router-dom": "^5.1.0",
     "@types/styled-components": "^4.1.19",
