--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "copy-to-clipboard": "^3.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0",
